--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -137,6 +137,10 @@
       right: -20px;
       top: -20px;
       cursor: pointer;
+      @media (max-width: 768px) {
+        top: -16px;
+        right: -4px;
+      }
       p {
         margin: -4px 0px 2px 0px;
         margin-bottom: 0;
